Fix bug 179307: when a sheet is displayed in Camino, push a native code security context onto the stack so that the context is correct for native code that can run via PLEvents while the sheet is being displayed. This fixes backwards typing in other windows. r=mento Also fix warnings.