camino/src/browser/nsAlertController.mm
@@ -34,7 +34,11 @@
  * the terms of any one of the MPL, the GPL or the LGPL.
  *
  * ***** END LICENSE BLOCK ***** */
- 
+
+struct JSContext; // allow nsIJSContextStack to be included without sucking in JS headers
+#include "nsIJSContextStack.h"
+#include "nsServiceManagerUtils.h"
+
 #import "nsAlertController.h"
 #import "CHBrowserService.h"
 
@@ -114,6 +118,42 @@ const int kLabelCheckboxAdjustment = 2; // # pixels the label must be pushed dow
 #pragma mark -
 
 @implementation nsAlertController
+
++ (int)safeRunModalForWindow:(NSWindow*)inWindow relativeToWindow:(NSWindow*)inParentWindow
+{
+  if (inParentWindow)
+  {
+    // If there is already a modal window up, convert a sheet into a modal window,
+    // because AppKit will hang if you try to do this (possibly because we're using
+    // the deprecated and sucky runModalForWindow:relativeToWindow:).
+    // Also, if the parent window already has an attached sheet, or is not visible,
+    // also null out the parent and show this as a modal dialog.
+    if ([NSApp modalWindow] || [inParentWindow attachedSheet] || ![inParentWindow isVisible])
+      inParentWindow = nil;
+  }
+
+  int result = NSAlertErrorReturn;
+
+  nsCOMPtr<nsIJSContextStack> stack(do_GetService("@mozilla.org/js/xpc/ContextStack;1"));
+  if (stack && NS_SUCCEEDED(stack->Push(nsnull)))
+  {
+    // be paranoid; we don't want to throw Obj-C exceptions over C++ code
+    NS_DURING
+      if (inParentWindow)
+        result = [NSApp runModalForWindow:inWindow relativeToWindow:inParentWindow];
+      else
+        result = [NSApp runModalForWindow:inWindow];
+    NS_HANDLER
+      NSLog(@"Exception caught in safeRunModalForWindow:relativeToWindow: %@", localException);
+    NS_ENDHANDLER
+
+    JSContext* cx;
+    stack->Pop(&cx);
+    NS_ASSERTION(cx == nsnull, "JSContextStack mismatch");
+  }
+    
+  return result;
+}
 
 - (IBAction)hitButton1:(id)sender
 {
@@ -398,23 +438,8 @@ const int kLabelCheckboxAdjustment = 2; // # pixels the label must be pushed dow
 
 - (int)runModalWindow:(NSWindow*)inDialog relativeToWindow:(NSWindow*)inParentWindow
 {
-  if (inParentWindow)
-  {
-    // If there is already a modal window up, convert a sheet into a modal window,
-    // because AppKit will hang if you try to do this (possibly because we're using
-    // the deprecated and sucky runModalForWindow:relativeToWindow:).
-    // Also, if the parent window already has an attached sheet, or is not visible,
-    // also null out the parent and show this as a modal dialog.
-    if ([NSApp modalWindow] || [inParentWindow attachedSheet] || ![inParentWindow isVisible])
-      inParentWindow = nil;
-  }
+  int result = [nsAlertController safeRunModalForWindow:inDialog relativeToWindow:inParentWindow];
   
-  int result;
-  if (inParentWindow)
-    result = [NSApp runModalForWindow:inDialog relativeToWindow:inParentWindow];
-  else
-    result = [NSApp runModalForWindow:inDialog];
-
   // Convert any error into an exception
   if (result == NSAlertErrorReturn)
       [NSException raise:NSInternalInconsistencyException format:@"-runModalForWindow returned error"];
